kubernetes/production/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: swapams--service
  namespace: swapams
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
