kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swapams--ingress
  namespace: swapams
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cert-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ams.swap-europe.fr
      secretName: swapams--tls
  rules:
    - host: ams.swap-europe.fr
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: swapams--service
              port:
                number: 80
